--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-Binaries
+# Binary Files
+Binaries/*
+Plugins/**/Binaries/*
+
+# Don't ignore icon files in Build
+!Build/**/*.ico
+
+# Built data for maps
+*_BuiltData.uasset
+
+# Builds
+Build/*
 DerivedDataCache
 Intermediate
 Saved
